resolved user references